--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start":"node index.js",
+    "server": "nodemon index.js",
+    "frontend": "npm start --prefix ./frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "author": "\"Akhil Singh\"",
   "license": "ISC",
